<resources>
    <string name="app_name">Termostt</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_room_config">Room settings</string>
    <string name="title_activity_air_config">A/C</string>
    <string name="title_activity_air_commands">A/C controls</string>
    <string name="title_activity_sensors">Sensors</string>
    <string name="title_activity_sensor_config">Sensor settings</string>
    <string name="title_activity_monitor_config">Parameters</string>
    <string name="title_activity_monitor">Termostt</string>
    <string name="bt_new_room">New room</string>
    <string name="bt_air_on_off">On/Off</string>
    <string name="bt_air_up">+</string>
    <string name="bt_air_down">-</string>
    <string name="bt_commands">Controls</string>
    <string name="bt_new_sensor">New sensor</string>
    <string name="t_now">Current temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pmv">PMV</string>
    <string name="t_target">Target</string>
    <string name="t_ac">A/C</string>
    <string name="loading">Loading</string>
    <string name="sensation">Sensation</string>
    <string name="bt_params">Set parameters</string>
    <string name="met">Metabolic energy</string>
    <string name="clo">Clothing insulation</string>
    <string name="name">Name</string>
    <string name="broker">Broker</string>
    <string name="port">Port</string>
    <string name="sensors">Sensors</string>
    <string name="pin">Pin</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="finish">Finish</string>
    <string name="monitor">Monitor</string>
    <string name="configure">Configure</string>
    <string name="remove">Remove</string>
    <string name="met_1">Lazy</string>
    <string name="met_2">Regular</string>
    <string name="met_3">Heavy</string>
    <string name="clo_1">Nude</string>
    <string name="clo_2">Summer</string>
    <string name="clo_3">Autumn</string>
    <string name="clo_4">Winter</string>
    <string name="scale_1">Cold</string>
    <string name="scale_2">Cool</string>
    <string name="scale_3">Neutral</string>
    <string name="scale_4">Warm</string>
    <string name="scale_5">Hot</string>
    <string name="protocol">Protocol</string>
    <string name="code">Code</string>
    <string name="length">Length</string>
</resources>
