<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufsm.inf.gkarkow.termostt.RoomConfigActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tvRoomName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRoomName"
        android:layout_below="@+id/tvRoomName"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broker"
        android:id="@+id/tvRoomBrokerHost"
        android:layout_below="@+id/etRoomName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRoomBrokerHost"
        android:layout_below="@+id/tvRoomBrokerHost"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:id="@+id/tvRoomBrokerPort"
        android:layout_below="@+id/etRoomBrokerHost"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRoomBrokerPort"
        android:layout_below="@+id/tvRoomBrokerPort"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btSaveRoom"
        android:layout_below="@+id/etRoomBrokerPort"
        android:layout_centerHorizontal="true"
        android:onClick="saveRoom" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensors"
        android:id="@+id/btSensors"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_ac"
        android:id="@+id/btAC"
        android:layout_above="@+id/btSensors"
        android:layout_centerHorizontal="true"
        android:onClick="ac" />

</RelativeLayout>
