<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufsm.inf.gkarkow.termostt.AirCommandsActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_air_on_off"
        android:id="@+id/btAirOnOff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onOffCommand" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_air_up"
        android:id="@+id/btAirUp"
        android:layout_below="@+id/btAirOnOff"
        android:layout_centerHorizontal="true"
        android:onClick="upCommand" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_air_down"
        android:id="@+id/btAirDown"
        android:layout_below="@+id/btAirUp"
        android:layout_centerHorizontal="true"
        android:onClick="downCommand" />

</RelativeLayout>
